fix: search zindex overflow on scale

--- a/static/style/root.css
+++ b/static/style/root.css
@@ -31,6 +31,7 @@ nav {
 }
 
 .nav-tile {
+    z-index: 1;
     background: var(--secondary);
     padding: 1em;
     border-radius: 1em;
@@ -81,7 +82,7 @@ nav {
     bottom: 0;
     left: 0;
     translate: 0 calc(100% - 2px);
-    z-index: 1;
+    z-index: 10;
     width: 100%;
     border: 1px solid var(--accent);
     border-radius: 0 0 0.5em 0.5em;
@@ -110,10 +111,11 @@ nav {
 }
 
 main {
+    position: relative;
     width: 100%;
     padding: 1em;
     padding-bottom: 30%;
-    z-index: -1;
+    z-index: 0;
     text-align: center;
 }
 
